--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ video{
     position: relative;
 }
 #page1 h1::before{
-    content: 'EAT. DRINK. PLAY.';
+    content: 'Anuj Shukla Frontend Developer';
     position: absolute;
     color: #000;
     top: -2px;
