--- a/style.css
+++ b/style.css
@@ -100,6 +100,15 @@ video{
     -webkit-text-stroke: 2px #95C11E;
     z-index: -1;
 }
+#page1 h2::before{
+    content: 'Anuj Shukla';
+    position: absolute;
+    color: #000;
+    top: -2px;
+    left: -2px;
+    -webkit-text-stroke: 2px #95C11E;
+    z-index: -1;
+}
 #page1 h2{
     font-size: 30px;
     font-weight: 800;
@@ -276,7 +285,7 @@ video{
 }
 #green-div h4{
     width: 50%;
-    font-size: 25px;
+    font-size: 50px;
     font-weight: 900;
     text-transform: uppercase;
     text-align: center; 
