--- a/style.css
+++ b/style.css
@@ -101,11 +101,11 @@ video{
     z-index: -1;
 }
 #page1 h2::before{
-    content: 'Anuj Shukla';
+    content: 'Frontend Developer';
     position: absolute;
     color: #000;
-    top: -2px;
-    left: -2px;
+    /* top: -2px;
+    left: -2px; */
     -webkit-text-stroke: 2px #95C11E;
     z-index: -1;
 }
@@ -373,7 +373,7 @@ video{
     scale: 1;
 }
 #page4 h1{
-    font-size: 100px;
+    font-size: 200px;
     position: absolute;
     top: 20px;
     font-weight: 900;
