--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ video{
     transition: all ease 0.6s;
 }
 #card1{
-    background-image: url(https://cdn.prod.website-files.com/65375da9c3d6faf08eb26a79/6746c2012b93fa1ab7d4ede2_unnamed%20(4).png)
+    background-image: url(https://cuberto.com/assets/projects/magma/splitshow/1.png)
 }
 #card2{
     background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSfxFv3yZ4J5rdpLTN77Zx2VulE-3dKldxDeg&s)
