--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ video{
     margin-bottom: 20px;
 }
 #page1 p{
-    font-size: 15px;
+    font-size: 20px;
     font-weight: 500;
     width: 40%;
 }
@@ -218,6 +218,11 @@ video{
 }
 #about-us-in p{
     font-size: 20px;
+    line-height: 30px;
+}
+#about-us-in p span{
+    font-size: 25px;
+    -webkit-text-stroke: 0.5px #95C11E;
     line-height: 30px;
 }
 
